[gd_scene load_steps=3 format=3 uid="uid://dyw2pq031hv4g"]

[ext_resource type="Script" uid="uid://danhiwm7tst86" path="res://scripts/UI/death_menu.gd" id="1_okyhj"]

[sub_resource type="LabelSettings" id="LabelSettings_jd4b7"]
font_size = 24
shadow_color = Color(0.629897, 0.289341, 0.576308, 0)

[node name="DeathMenu" type="Control"]
process_mode = 2
z_index = 1000
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_okyhj")

[node name="Center" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Center"]
custom_minimum_size = Vector2(420, 220)
layout_mode = 2

[node name="Margin" type="MarginContainer" parent="Center/Panel"]
layout_mode = 0
offset_right = 184.0
offset_bottom = 70.0

[node name="VBox" type="VBoxContainer" parent="Center/Panel/Margin"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="Title" type="Label" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
text = "Level Complete!"
label_settings = SubResource("LabelSettings_jd4b7")
horizontal_alignment = 1

[node name="BtnApply" type="TextureButton" parent="Center/Panel/Margin/VBox"]
layout_mode = 2

[node name="BtnSkip" type="TextureButton" parent="Center/Panel/Margin/VBox"]
layout_mode = 2

[node name="BtnRestart" type="TextureButton" parent="Center/Panel/Margin/VBox"]
layout_mode = 2
